--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -31,12 +31,22 @@
             <input type="text" name="searchTerm" id="searchTerm" />
         </p>
 
-        <input type="submit" value="Search" />
+        <p>
+            <input type="submit" value="Search" />
+        </p>
     </form>
 
     <hr />
 
-    <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    <!-- TODO #2 - Display results of search -->
+
+    <div th:if="${jobs} and ${jobs.size()}">
+
+        <table th:each="job : ${jobs}">
+            <tr th:each="field: ${job}"><td th:text="${field.key}"></td><td th:text="${field.value}"></td></tr>
+            <tr><td>********************</td></tr>
+        </table>
+    </div>
 
 </div>
 
